--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,97 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800');
 
+.modelcommon div:last-child h3 {
+    margin-top: 10px;
+}
+.modelcommon .modal-content {
+    background-color: #fff;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #fff;
+    max-width: 450px;
+    border-radius: 0;
+    width: 100%;
+    width: 87%;
+}
+.modelcommon .modal-content .close{
+color: #fff;
+    float: right;
+    font-size: 18px;
+    position: absolute;
+    right: -10px;
+    top: -15px;
+    background: #FF1E00;
+    opacity: 1;
+    width: 35px;
+    height: 35px;
+    line-height: 33px;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 300;
+}
+.modelcommon .modal-content h3 {
+    color: #060606;
+    font-weight: 600;
+    font-size: 20px;
+    margin: 0px 0 15px;
+}
+.modelcommon{padding-top: 100px;}
+.modelcommon .modal-content select {
+    border: 2px solid #929292;
+    padding: 7px 6px;
+    font-weight: 600;
+    color: #4B4B4B;
+    font-size: 16px;
+    appearance: none;
+    moz-appearance: none;
+    -webkit-appearance: none;
+    background: url(../images/select-arrow.png);
+    background-repeat: no-repeat;
+    background-position: 98% 53%;
+    background-size: 4%;
+    width: 100%;
+}
+
+.mainpic {
+    float: left;
+    margin-right: 15px;
+}
+.smallimg {
+    float: left;
+    margin-top: 46px;
+}
+.navmainsection button {
+    border: none;
+    padding: 0;
+}
+.slidearrow {
+    float: right;
+    width: 20px;
+    position: absolute;
+    right: -10px;
+    top: 49%;
+    padding: 0px 3px;
+    background: #ddd;
+	border: 1px solid #d6d6d6;
+}
+.navmainsection {
+    padding: 11px 10px;
+}
+.navbar-toggler {
+    font-size: 1rem;
+}
+.slidearrow a {
+    float: left;
+    width: 100%;
+}
+.uploadbtns {
+    float: left;
+    width: 100%;
+}
+.smallimg img {
+    margin-right: 10px;
+}
+
 /*============29/june 2018================*/
  /* The Modal (background) */
         .select-info-grid .modal {
@@ -365,6 +457,7 @@ padding:5px;
 font-size:16px;
 font-weight:400;
 margin-bottom:5px;	
+margin-top:5px;
 }
 .select-info-box h3{
 margin:0px;
