--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800');
 
-
+.breedSharebtn a {
+border-radius:0px;
+}
 .navbar-toggler-icon {
     display: inline-block;
     width: 30px;
@@ -557,7 +559,7 @@ font-size:30px;
 { color:#000;}
 
 .breedInfo table.table td{  font-weight:600; background-color:#f3f3f3;}
-.breedSharebtn { padding-bottom:15px; width:100%; float:left;}
+.breedSharebtn { padding-bottom:0px; width:100%; float:left; bottom:0; position:absolute;}
 .breedSharebtn .btn{ font-size:14px;}
 
 .uploadbtns .btn{ font-size:14px; padding-left:8px; padding-right:8px;}
@@ -861,6 +863,8 @@ h4.post-title {
 #report_user .modal-body {
     padding: 0rem 0 5rem;
 }
+
+label small{ font-size:8px;}
 @media (max-width: 767.98px) {
   .chat-application .chat-app-window {
     height : -webkit-calc(100% - 124px);
@@ -879,7 +883,7 @@ h4.post-title {
 
 
 .your-connections table thead .fa{ color:#fff; font-size:20px;}
-
+.reqfield{ color:#F00; padding-right:1px; font-weight:600;}p.noresults{ padding:5px;}
 @media (max-width: 480px) {
 .your-connections table.table{ max-width:inherit; width:480px;}	
 #report_user .modal-dialog {
