--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,15 @@ h4.post-title {
 }
 
 label small{ font-size:8px;}
+#otp_container .phone-login-field {
+    padding-left: 0 !important;
+}
+.phloginecontainer {
+  width: 100%;
+}
+.navmainsection img {
+    margin-left: 10px;
+}
 @media (max-width: 767.98px) {
   .chat-application .chat-app-window {
     height : -webkit-calc(100% - 124px);
