--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ color: #fff;
     padding: 0;
 	background: none;
 	    margin-left: 10px;
+		outline:none;
 }
 .navmainsection .navbar-collapse li {
     list-style: none;
