--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800');
 
+.viewprofile .form-group div {
+    float: left;
+}
+.viewprofile .form-group label {
+    width: 59%;
+    float: left;
+}
+.viewprofile .form-group {
+    margin-bottom: 7px;
+    float: left;
+    width: 100%;
+}
 iframe#chk_frame {
     display: none;
 }
