--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800');
 
+.loginmn {
+    margin-top: 20px;
+}
 .phloginfld .cc-picker {
 float: left;
     margin-right: 2%;
