--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -1,11 +1,3 @@
-/**
- * Owl Carousel v2.3.4
- * Copyright 2013-2018 David Deutsch
- * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
- */
-/*
- *  Owl Carousel - Core
- */
 .owl-carousel {
   display: none;
   width: 100%;
@@ -119,20 +111,11 @@
   100% {
     opacity: 0; } }
 
-/*
- * 	Owl Carousel - Auto Height Plugin
- */
 .owl-height {
   transition: height 500ms ease-in-out; }
 
-/*
- * 	Owl Carousel - Lazy Load Plugin
- */
 .owl-carousel .owl-item {
-  /**
-			This is introduced due to a bug in IE11 where lazy loading combined with autoheight plugin causes a wrong
-			calculation of the height of the owl-item that breaks page layouts
-		 */ }
+ }
   .owl-carousel .owl-item .owl-lazy {
     opacity: 0;
     transition: opacity 400ms ease; }
